removed the loading bar cuz too annoying, and added a bounce type animation to the emailDialog

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,10 @@
+.aboutSection{
+  position: fixed;
+}
+
+
+
+
 .heroText {
   font-size: 20px;
 }
@@ -188,31 +195,77 @@
   position: fixed;
   top: 85%;
   right: 0%;
+  animation: fadeIn;
+  animation-duration:0.5s ;
+
 }
 
-.emailDialog::before{
+
+
+
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+    right: -20%;
+  }
+
+
+ 
+  50%{
+    right: 0%;
+  }
+
+  70%{
+    right: -3%;
+  }
+  
+  100%{
+    opacity: 1;
+    right: 0%;
+  }
+  
+}
+
+.fadeOut{
+  animation-name: fadeOut;
+  animation-duration: 0.5s;
+  animation-delay: 3.5s;
+
+}
+
+@keyframes fadeOut {
+  30%{
+    right: 5%;
+    opacity: 1;
+  }
+
+  100%{
+    opacity: 0;
+    right: -40%;
+  }  
+}
+
+/* .emailDialog::before{
   content: '';
   position: absolute;
-  width: 375px;
-  height:5px;
-  /* top: 400px; */
-  rotate: 0deg;
+  width: 24.5%;
+  height:3px;
+  rotate: 180deg;
+  transform: scale(-1, 1);
   right:13px ;
   bottom: 14px;
   background-color: #1a1a1a;  
   animation-name: loadingDecrease;
   animation-duration: 6s;
-}
+} */
 
-@keyframes loadingDecrease {
-  10%{
-    width: 360px;
-  }
+/* @keyframes loadingDecrease {
+
   100%{
     width: 0px;
   }
 
-}
+} */
 
 
 @media (max-width:1280px) {
@@ -239,6 +292,8 @@
     width: 20%;
     bottom: 35px;
   }
+
+
 
   .scale{
     scale: 1.01;
